--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading123</h1>
+    <h2>Heading123</h2>
+    <h3>Heading123</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A illo aut,
+      error maxime reiciendis quam sint impedit quas molestiae. Saepe dolore
+      nisi dolor laborum debitis sunt omnis delectus ratione. Non. Ducimus
+      expedita blanditiis, architecto pariatur beatae libero eum perspiciatis
+      quod vero, saepe omnis. Recusandae, esse! Quod similique nostrum iste?
+      Deserunt, quo? Dolore, aliquam in ullam praesentium esse ducimus expedita
+      earum?
+    </p>
+  </body>
 </html>
