build the arrow link component.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Heading123</h1>
-    <h2>Heading123</h2>
-    <h3>Heading123</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A illo aut,
-      error maxime reiciendis quam sint impedit quas molestiae. Saepe dolore
-      nisi dolor laborum debitis sunt omnis delectus ratione. Non. Ducimus
-      expedita blanditiis, architecto pariatur beatae libero eum perspiciatis
-      quod vero, saepe omnis. Recusandae, esse! Quod similique nostrum iste?
-      Deserunt, quo? Dolore, aliquam in ullam praesentium esse ducimus expedita
-      earum?
-    </p>
+    <a href="#" class="link-arrow">learn more</a>
   </body>
 </html>
