--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use href="#quotes"></use>
-      </svg>
-    </span>
+    <button class="btn btn--outline">buy now</button>
   </body>
 </html>
