--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <button class="btn btn--outline">buy now</button>
+    <div class="input-group">
+      <input
+        type="text"
+        class="input"
+        placeholder="Enter domain name here..."
+      />
+      <button class="btn btn--accent">search</button>
+    </div>
   </body>
 </html>
