--- a/index.html
+++ b/index.html
@@ -385,11 +385,7 @@
               </p>
               <footer>
                 <div class="media">
-                  <div class="media__image">
-                    <svg class="icon icon--primary quote__line">
-                      <use href="/sprite.7597089b.svg#line"></use>
-                    </svg>
-                  </div>
+                  <div class="media__image"></div>
                   <div class="media__body">
                     <h3 class="media__title quote__author">John Smith</h3>
                     <p class="quote__organization">ABC Company</p>
